# bff-mono

./: CodesInPaper.hs  Examples.hs  GraphExample.hs  LICENSE  README.md  Test.hs  Tests.hs  XMLExamples.hs  bff-mono.cabal  cheap-b18n.cabal
Data/: BffMono.hs
Data/BffMono/: Base.hs  CheckHistory.hs  EquivMap.hs  EquivWitness.hs  Utility.hs
Examples/: Examples.hs
Language/: CheapB18n.hs
Language/CheapB18n/: Base.hs  CheckHistory.hs  EquivMap.hs  EquivWitness.hs  EquivalenceClass.hs  Ex.hs  FreeMonoid.hs  Helper.hs  Utility.hs
doc/correctness/: Makefile  macros.tex  main.bib  main.tex
