name:                bff-mono
version:             0.1.0.0
synopsis:            "Bidirectionalization for Free" for Monomorphic Transformations
description:         This package provides a way to make a bidirectional 
                     transformation (a getter/setter pair) 
                     from a unidirectional 
                     one. Like `bff` package, this constructs a bidirectional 
                     transformation based on free-theorem. Unlike `bff` package,
                     the package supports some of monomorphic transformations. 
                     
                     
license:             BSD3
license-file:        LICENSE
author:              Kazutaka Matsuda
                     Meng Wang
maintainer:          kztk@is.s.u-tokyo.ac.jp
category:            Language
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     Data.BffMono
                       Data.BffMono.Utility

  other-modules:       Data.BffMono.Base 
                       Data.BffMono.CheckHistory 
                       Data.BffMono.EquivMap 
                       Data.BffMono.EquivWitness 
                       
  build-depends:       base >= 4 && < 5, mtl, containers

  
